--- a/app/src/main/res/layout/field_visit.xml
+++ b/app/src/main/res/layout/field_visit.xml
@@ -10,11 +10,10 @@
             type="com.nic.TPTaxDepartment.activity.FieldVisit" />
     </data>
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-    <RelativeLayout
+   <androidx.coordinatorlayout.widget.CoordinatorLayout
+       android:layout_width="match_parent"
+       android:layout_height="match_parent">
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:id="@+id/activity_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -80,9 +79,9 @@
                         android:layout_marginTop="15dp"
                         android:layout_marginRight="15dp"
                         android:adjustViewBounds="true"
-                        android:padding="8dp"
-                        android:background="@drawable/ic_history"
-                        android:backgroundTint="@android:color/white"
+                        android:padding="2dp"
+                        android:tint="@color/white"
+                        android:src="@drawable/ic_history"
                         android:onClick="@{()-> activity.loadHistory()}"
                         android:scaleType="centerInside" />
 
@@ -707,7 +706,7 @@
         </androidx.core.widget.NestedScrollView>
 
 
-    </RelativeLayout>
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -782,6 +781,5 @@
             </RelativeLayout>
 
         </RelativeLayout>
-
-    </RelativeLayout>
+   </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
