--- a/app/src/main/res/layout/splash_screen.xml
+++ b/app/src/main/res/layout/splash_screen.xml
@@ -79,6 +79,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="@dimen/_10sdp"
+                    android:gravity="center_horizontal"
                     android:padding="3dp"
                     android:text="@string/app_name_line"
                     android:textColor="@color/grey2"
