Traders  Full Details view class change functionality and screen changes

--- a/app/src/main/res/layout/existing_trade_details_view_new.xml
+++ b/app/src/main/res/layout/existing_trade_details_view_new.xml
@@ -94,7 +94,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/main"
-            android:visibility="gone">
+            android:visibility="visible">
             <com.google.android.material.appbar.AppBarLayout
                 android:layout_width="match_parent"
                 app:elevation="0dp"
@@ -187,7 +187,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:id="@+id/first"
-                        android:visibility="gone"
+                        android:visibility="visible"
                         android:layout_marginBottom="@dimen/padding"
                         android:orientation="vertical">
                         //Applicant Name
@@ -405,7 +405,9 @@
                                         android:layout_width="match_parent"
                                         android:layout_height="40dp"
                                         android:background="@color/full_transparent"
-                                        android:padding="0dp"                                        android:textColor="@color/grey2"
+                                        android:padding="0dp"
+                                        android:maxLength="2"
+                                        android:textColor="@color/grey2"
                                         android:inputType="number" />
 
                                 </com.google.android.material.textfield.TextInputLayout>
@@ -738,7 +740,7 @@
                         android:layout_below="@+id/appBarLayout"
                         android:id="@+id/second"
                         android:layout_marginBottom="@dimen/padding"
-                        android:visibility="visible"
+                        android:visibility="gone"
                         android:orientation="vertical">
                         //Ward No
                         <LinearLayout
@@ -2391,8 +2393,8 @@
             </RelativeLayout>
         </RelativeLayout>
 
-        <RelativeLayout
-            android:visibility="visible"
+       <!-- <RelativeLayout
+            android:visibility="gone"
             android:id="@+id/full_details"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -3027,6 +3029,7 @@
             </LinearLayout>
             </ScrollView>
         </RelativeLayout>
+       -->
     </RelativeLayout>
 </layout>
 
