--- a/app/src/main/res/layout/login_screen.xml
+++ b/app/src/main/res/layout/login_screen.xml
@@ -31,7 +31,7 @@ xmlns:customfontdemo="http://schemas.android.com/tools">
         android:background="@android:color/transparent"
         android:id="@+id/below_bg"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/_90sdp"
+        android:layout_height="@dimen/_100sdp"
         android:layout_alignParentBottom="true"
         >
         <ImageView
@@ -78,7 +78,7 @@ xmlns:customfontdemo="http://schemas.android.com/tools">
                 android:padding="5dp"
                 android:text="@string/app_name_line"
                 android:textColor="@color/grey2"
-                android:textSize="17sp"
+                android:textSize="15sp"
                 android:textStyle="bold"
                 customfontdemo:fontName="@string/font_circular_medium" />
 
@@ -100,13 +100,12 @@ xmlns:customfontdemo="http://schemas.android.com/tools">
                 android:id="@+id/dpt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/amp"
-                android:layout_centerInParent="true"
+                android:layout_below="@+id/rd"
                 android:padding="3dp"
-                android:visibility="gone"
-                android:text="Panchayat Raj Department"
-                android:textColor="@android:color/black"
-                android:textSize="17sp"
+                android:layout_centerHorizontal="true"
+                android:text="(For Official Use)"
+                android:textColor="@color/grey2"
+                android:textSize="15sp"
                 android:textStyle="bold"
                 customfontdemo:fontName="@string/font_circular_medium" />
 
@@ -304,7 +303,7 @@ xmlns:customfontdemo="http://schemas.android.com/tools">
                                     android:layout_height="wrap_content"
                                     android:layout_marginStart="10dp"
                                     android:layout_marginEnd="10dp"                                    android:layout_marginTop="@dimen/padding"
-                                    android:text="UserName"
+                                    android:text="User Name"
                                     android:textColor="@color/grey2"
                                     android:textSize="15sp"
                                     android:visibility="visible"
@@ -348,7 +347,7 @@ xmlns:customfontdemo="http://schemas.android.com/tools">
                                                 android:background="@color/full_transparent"
                                                 android:inputType="textPersonName"
                                                 android:padding="0dp"
-                                                android:hint="UserName"
+                                                android:hint="Username"
                                                 />
 
                                         </com.google.android.material.textfield.TextInputLayout>
@@ -382,7 +381,7 @@ xmlns:customfontdemo="http://schemas.android.com/tools">
                                     android:layout_height="wrap_content"
                                     android:layout_marginStart="10dp"
                                     android:layout_marginEnd="10dp"                                    android:layout_marginTop="@dimen/padding"
-                                    android:text="PassWord"
+                                    android:text="Password"
                                     android:textColor="@color/grey2"
                                     android:textSize="15sp"
                                     android:visibility="visible"
@@ -426,7 +425,7 @@ xmlns:customfontdemo="http://schemas.android.com/tools">
                                                 android:layout_height="40dp"
                                                 android:background="@color/full_transparent"
                                                android:padding="0dp"
-                                                android:hint="PassWord"
+                                                android:hint="Password"
                                                 android:inputType="textPassword"/>
 
                                         </com.google.android.material.textfield.TextInputLayout>
@@ -466,7 +465,7 @@ xmlns:customfontdemo="http://schemas.android.com/tools">
                 android:id="@+id/tv_version_nic_name_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="bottom">
+                android:layout_alignParentBottom="true">
 
 
 
@@ -477,24 +476,21 @@ xmlns:customfontdemo="http://schemas.android.com/tools">
                     android:layout_height="wrap_content"
                     android:padding="@dimen/_13sdp"
                     android:text=""
-                    android:layout_above="@+id/nic_name"
-
-
                     android:textAlignment="center"
                     android:textColor="@color/grey2"
-                    android:textSize="@dimen/_15sdp" />
+                    android:textSize="@dimen/_13sdp" />
 
                 <TextView
+                    android:layout_below="@+id/tv_version_number"
                     android:id="@+id/nic_name"
                     style="@style/font_poppins_semibold"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:padding="@dimen/_13sdp"
-                    android:layout_alignParentBottom="true"
-                    android:text="Sofware Designed &amp; Developed by NIC"
+                    android:text="Software Designed &amp; Developed by NIC Chennai"
                     android:textAlignment="center"
                     android:textColor="@android:color/white"
-                    android:textSize="@dimen/_15sdp" />
+                    android:textSize="@dimen/_13sdp" />
             </RelativeLayout>
         </RelativeLayout>
 
