--- a/app/src/main/res/drawable/back_rect_drawable.xml
+++ b/app/src/main/res/drawable/back_rect_drawable.xml
@@ -2,5 +2,6 @@
 <shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
 
     <corners android:radius="30dp"></corners>
-    <solid android:color="#954CFB"></solid>
+    <solid android:color="#B481FC"></solid>
+    //954CFB
 </shape>
