--- a/app/src/main/res/layout/new_trade_licence_screen.xml
+++ b/app/src/main/res/layout/new_trade_licence_screen.xml
@@ -72,7 +72,6 @@
                             android:layout_width="30dp"
                             android:layout_height="30dp"
                             android:layout_alignParentRight="true"
-                            android:layout_centerHorizontal="true"
                             android:layout_centerVertical="true"
                             android:layout_marginRight="15dp"
                             android:adjustViewBounds="true"
@@ -324,6 +323,7 @@
                                         android:id="@+id/age"
                                         android:layout_width="match_parent"
                                         android:layout_height="40dp"
+                                        android:maxLength="2"
                                         android:inputType="number"
                                         android:textColor="@color/grey2"
                                         android:background="@color/full_transparent"
